# lazy_model

./: .pre-commit-config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: github-actions-lint.yml  github-actions-mypy.yml  github-actions-tests.yml
lazy_model/: __init__.py  main.py  nao.py
lazy_model/parser/: new.py  old.py
tests/: models.py  test_parsing.py
